--- a/catamaran-btc/Clarinet.toml
+++ b/catamaran-btc/Clarinet.toml
@@ -25,6 +25,16 @@ path = 'contracts/btc-stx-swap.clar'
 clarity_version = 2
 epoch = 2.5
 
+[contracts.btc-stx-swap-simulate]
+path = 'contracts/btc-stx-swap-simulate.clar'
+clarity_version = 2
+epoch = 2.5
+
+[contracts.sbtc]
+path = 'contracts/sbtc.clar'
+clarity_version = 2
+epoch = 2.5
+
 [contracts.btc-stx-option]
 path = 'contracts/btc-stx-option.clar'
 clarity_version = 2
